# pde-solver

./: .gitignore  README.md  anim.py  bisection.py  cpwp.py  ising.py  linalg.py  main.py  ode.py  ode_ivp.py  pde.py  playground.py  visualize.py
.obsidian/: appearance.json  workspace  workspace.json
.obsidian/snippets/: heading.css
algorithm/: README.md  algorithm note.md
algorithm/chapter3/: 6_brute_force.cpp  6brute_force
algorithm/dp/: 1.minimal_sum_partition.cpp  2.boolean_parenthesization.cpp
algorithm/part3/: 6.brute_force.cpp  6.brute_force.md  7.divide_conquer.md
cg/: 1.build.md  2.windows.md  4.shaders.md  6.materials.md  README.md  cg.aux  cg.out  cg.tex  cpp note.md  note_learnopengl_2.md  projects.md  structure.md
cg/3.inputs/: CMakeLists.txt  input.cpp  input.h  main.cpp
cg/4.shaders/: input.cpp  shader.frag  shader.vert
cg/4.shaders/glad/src/: glad.c
cg/glad/include/glad/: glad.h
cg/gltf-viewer/: CMakeLists.txt  README.md
cg/gltf-viewer/assets/models/backpack/: backpack.gltf
cg/gltf-viewer/assets/shaders/: simple.frag
cg/gltf-viewer/src/: main.cpp
cg/laboratory/: CMakeLists.txt  _mesh.h  _model.h  camera.h  main.cpp  material.h  mesh.h  model.h  render.h  window.h
cg/laboratory/assets/shaders/: default.frag  default.vert
cg/playground/: CMakeLists.txt  camera.h  input.h  main.cpp  mesh.cpp  mesh.h  model.h  shader.h  window.h
cg/playground2/: CMakeLists.txt  main.cpp  model.h  shader.cpp  window.cpp
cp/: README.md  algorithm.md  cpp note.md  cpp.md  data structures.md  graph.md  jongman.md  linear.md  math.md  playground  tree.md
cp/part3/: 6.brute_force  brute_force.cpp  brute_force.md  divide_conquer.cpp
cpp/: cpp note.md
ising/: mcmc.py
learnopengl/: CMakeLists.txt  main.cpp  shader.fs  shader.vs  shader_s.h  stb_image.cpp
learnopengl/glad/src/: glad.c
ml/dialect/: README.md  hmm.py  run_infer.py  run_train.py  util.py
ml/dialect/(trash)/: __init__.py  morph_dict_generator.py  phonemic_seq2seq.py
ml/dialect/data/: small.tsv
ml/dialect/data/jiyeogeo/: chungbuk.txt  gangwon.txt  gyeongbuk.txt  gyeonggi.txt  gyeongnam.txt  jeonnam.txt  jiyeogeo_parallel_corpus(all).tsv  jiyeogeo_parallel_corpus(chungbuk).tsv  jiyeogeo_parallel_corpus(gangwon).tsv  jiyeogeo_parallel_corpus(gyeongbuk).tsv  jiyeogeo_parallel_corpus(gyeonggi).tsv  jiyeogeo_parallel_corpus(gyeongnam).tsv  jiyeogeo_parallel_corpus(jeonnam).tsv  jiyeogeo_tsv_maker.py
ml/dialect/data/urimalsam/: dict_tsv_maker.py  urimalsam_dict.tsv  urimalsam_parallel_corpus.tsv  urimalsam_tsv_maker.py
ml/dialect/model/: phonemic_hmm202210181633(5.15s).pkl
ml/sentiment/: decoder_image.tex  run_infer.py  run_train.py  sentiment.py  seq2seq.py  tester.py  tsv_consistency_tester.py  util.py
ml/sentiment/data/: ratings_test_small.tsv  ratings_train_small.tsv
na/: README.md  euler2d.py
opengl/: 1.opengl.md  2.build.md  3.inputs.md  3.windows.md  4.shaders.md  5.models.md  7.cameras.md  CMakeLists.txt  README.md  camera.md  main.cpp  note_learnopengl_1.md  opengl note.md  opengl projects.md  structure.md
opengl/3.windows/: input.cpp  main.cpp  window.h
opengl/4. shaders/: main.cpp  shader.cpp
opengl/4.shaders/: CMakeLists.txt  main.cpp
opengl/7.transformations/: CMakeLists.txt  main.cpp
opengl/glad/include/glad/: glad.h
opengl/learnopengl/: CMakeLists.txt  learnopengl note.md  main.cpp  shader_m.h
opengl/learnopengl/codes/4HelloWindow/: main.cpp
opengl/notes/: application.md  geometry.md  opengl.md  rasterization.md
opengl/playground/: CMakeLists.txt  input.h  main.cpp  mesh.cpp  mesh.h  model.h  shader.cpp  shader.h
python/: README.md  advdiff1d.py  anim.py  euler2d.py  heat1d.py  ising.md  ising.py  linalg.py  playground.py  python projects.md  visualize.py
python/ising/: ising_practice.py  mcmc.py
untitled/: CMakeLists.txt  main.cpp
